불필요한 모델 프리셋 슬롯 crud 제거
