# apps/backend/src/nest/translation/model-preset/dto/response/delete-model-preset.response.dto.ts
@@ -1,3 +1,0 @@
-import { BaseResponseDto } from '@apps/common/dist/dto/base-response.dto';
-
-export class DeleteModelPresetResponseDto extends BaseResponseDto {}
